@@ -1,10 +1,12 @@
 *0.11.0* *SVN*
 
+* Make UPPERCASE variables work
+
+* Added rails_env variable (defaults to production) for use by tasks that employ the RAILS_ENV environment variable
+
 * Added Actor.default_io_proc
 
 * Set :actor key on SSH channel instances
-
-* Added rails_env variable (defaults to production) for use by tasks that employ the RAILS_ENV environment variable
 
 
 *0.10.0* (January 2nd, 2006)
